--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,3 +42,37 @@ jobs:
         with:
           go-version: ">=1.24"
       - run: go test -v ./...
+
+  scan:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v5
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build Docker image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: false
+          load: true
+          tags: test-image:latest
+
+      - name: Install Syft and Grype
+        run: |
+          curl -sSfL https://raw.githubusercontent.com/anchore/syft/main/install.sh | sh -s -- -b /usr/local/bin
+          curl -sSfL https://raw.githubusercontent.com/anchore/grype/main/install.sh | sh -s -- -b /usr/local/bin
+
+      - name: Generate SBOM with Syft
+        run: syft test-image:latest -o cyclonedx-json > syft-sbom.json
+
+      - name: Scan for vulnerabilities with Grype
+        run: |
+          grype test-image:latest -o json > grype-scan.json
+          if grype test-image:latest --fail-on high; then
+            echo "No vulnerabilities >= high"
+          else
+            echo "Vulnerabilities found >= high"
+            exit 1
+          fi
